@@ -1,3 +1,8 @@
 " Redline Smalltalk, Copyright (c) James C. Ladd. All rights reserved. See LICENSE in the root of this distribution "
 
 ArrayedCollection < #Array
++ new: sizeRequested
+    <primitive: 71>
+
+- add: newObject
+    self shouldNotImplement.
