@@ -1,3 +1,5 @@
 " Redline Smalltalk, Copyright (c) James C. Ladd. All rights reserved. See LICENSE in the root of this distribution "
 
 SequenceableCollection < #ArrayedCollection
+- size
+    <primitive: 62>
